<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />
    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="Enter name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/artistText"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:hint="Enter artist"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="8dp"
        android:ems="10"

        android:hint="Enter year"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/saveButton"
        android:layout_margin="20dp"
        android:text="Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>